--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ timezone: America/Eastern
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Naro'd Homelab                          # the main title
+title: Chirpy                          # the main title
 
-tagline: Homelab Notes   # it will display as the sub-title
+tagline: A text-focused Jekyll theme   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
