--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ timezone: America/Eastern
 
 title: Narokuu                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Naro's Homelab Notes   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
